fixing style on small screen

--- a/src/components/layout/navbar.module.css
+++ b/src/components/layout/navbar.module.css
@@ -11,10 +11,9 @@
 }
 .header nav {
 	display: inline-flex;
-	justify-content: center;
 	align-content: center;
 	width: 100%;
-	justify-content: flex-start;
+	justify-content: space-evenly;
 }
 .header a {
 	display: inline;
@@ -94,7 +93,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
-
+		justify-content: flex-start;
 		flex: 1;
 		padding: none;
 		background-color: white;
